Causeview Package Complete/ant script/retrieveUnpackaged/objects/Historical_Address__c.object
<CustomObject>
    <description>Causeview - captures historical and other addresses for Individuals</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if address is currently active for the constituent</description>
        <inlineHelpText>Defines if address is currently active for the constituent</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Additional_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Linked__c</fullName>
        <label>Linked</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Historical_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>State/Province</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Brunswick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newfoundland and Labrador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova Scotia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nunavut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prince Edward Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quebec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saskatchewan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yukon Territories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Mail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Mail</label>
        <type>Checkbox</type>
    </fields>
    <label>Other Address</label>
    <nameField>
        <displayFormat>Add-{00000000}</displayFormat>
        <label>Other Address No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>